<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="info">Waiting for GPS...</string>
    <string name="app_name">Speed Warning</string>
    <string name="finish_p">Add finish point</string>
    <string name="start_p">Add start point</string>
    <string name="other_p">Add split point</string>
    <string name="about_message">Sample application to demostrate GPS in Android.\n\nVisit http://www.krvarma.com for more info.</string>
    <string name="unit_km">Kilometer</string>
    <string name="unit_miles">Miles</string>
    <string name="setting_unit">Measurement Unit</string>
    <string name="terrain_map">Terrain map</string>
    <string name="satelyte_map">Satelyte map</string>
    <string name="normal_map">Normal map</string>
    <string name="remove_pins">Clean map</string>

</resources>