<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_startpoint"
        android:title="@string/start_p"
        android:titleCondensed="@string/start_p">
    </item>
    <item
        android:id="@+id/menu_add_otherpoint"
        android:title="@string/other_p"
        android:titleCondensed="@string/other_p">
    </item>
    <item
        android:id="@+id/menu_add_finishpoint"
        android:title="@string/finish_p"
        android:titleCondensed="@string/finish_p">
    </item>
    <item
        android:id="@+id/menu_satelyte_type"
        android:title="@string/satelyte_map"
        android:titleCondensed="@string/satelyte_map">
    </item>
    <item
        android:id="@+id/menu_terrain_type"
        android:title="@string/terrain_map"
        android:titleCondensed="@string/terrain_map">
    </item>
    <item
        android:id="@+id/menu_normal_type"
        android:title="@string/normal_map"
        android:titleCondensed="@string/normal_map">
    </item>
    <item
        android:id="@+id/menu_remove_pins"
        android:title="@string/remove_pins"
        android:titleCondensed="@string/remove_pins">
    </item>

</menu>